--- a/pages/footer.html
+++ b/pages/footer.html
@@ -49,10 +49,10 @@
         </div>
         <h2>4000 m, 200 km/h, 50 sec</h2>
         <div class="links">
-            <a href="pages/legal_notice.php">
+            <a href="/~XAMMM/pages/legal_notice.php">
                 mentions légales
             </a>
-            <a href="pages/CGV">
+            <a href="/~XAMMM/pages/CGV">
                 conditions générales de vente
             </a>
         </div>
@@ -63,7 +63,7 @@
 
     <script src='/~XAMMM/scripts/axios.min.js'></script>
     <script src="/~XAMMM/scripts/footer.js"></script>
-    <link rel="stylesheet" href="/~XAMM/styles/footer.css">
+    <link rel="stylesheet" href="/~XAMMM/styles/footer.css">
 </footer>
 
 
