--- a/pages/footer.html
+++ b/pages/footer.html
@@ -36,15 +36,15 @@
     <div class="catch">
         <div class="social_media">
             <a href="https://www.facebook.com/yallahskydive">
-                <img src="images/logo-facebook.png">
+                <img src="/~XAMMM/images/logo-facebook.png">
             </a>
 
             <a href="https://www.instagram.com/parachutisme_71/">
-                <img src="images/logo-instagram.png">
+                <img src="/~XAMMM/images/logo-instagram.png">
             </a>
 
             <a href="https://www.yumping.fr/parachutisme/diagonale-chute-libre--e19681999">
-                <img src="images/logo-yumping.png">
+                <img src="/~XAMMM/images/logo-yumping.png">
             </a>
         </div>
         <h2>4000 m, 200 km/h, 50 sec</h2>
