--- a/pages/footer.html
+++ b/pages/footer.html
@@ -62,7 +62,7 @@
 
 
     <script src='/~XAMMM/scripts/axios.min.js'></script>
-    <script src="/~XAMMM/scripts/footer.js"></script>
+    <script src="/~XAMMM/scripts/footer.js" defer></script>
     <link rel="stylesheet" href="/~XAMMM/styles/footer.css">
 </footer>
 
