--- a/pages/footer.html
+++ b/pages/footer.html
@@ -52,7 +52,7 @@
             <a href="/~XAMMM/pages/legal_notice.php" class="link">
                 mentions légales
             </a>
-            <a href="/~XAMMM/pages/CGV" class="link">
+            <a href="/~XAMMM/pages/CGV.php" class="link">
                 conditions générales de vente
             </a>
         </div>
