--- a/pages/footer.html
+++ b/pages/footer.html
@@ -31,6 +31,12 @@
                 </div>
             </div>
         </form>
+
+        <div id="form-message-warning mt-4"></div>
+        <div id="form-message-success">
+            Votre message a été envoyé, Merci !
+        </div>
+
     </div>
 
     <div class="catch">
@@ -60,10 +66,12 @@
     </div>
 
 
-
+    <script src="/~XAMMM/scripts/jquery-3.3.1.min.js"></script>
+    <script src="/~XAMMM/scripts/jquery.validate.min.js"></script>
     <script src='/~XAMMM/scripts/axios.min.js'></script>
     <script src="/~XAMMM/scripts/footer.js"></script>
     <link rel="stylesheet" href="/~XAMMM/styles/footer.css">
+    <script src="/~XAMMM/scripts/contact.js"></script>
 </footer>
 
 
